fix horizontal scrolling and repeated user location icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,11 +237,12 @@ input:read-only {
 	margin-top: 10px;
 	color: red;
 }
-.filters-row .col-lg-12{
-	position: relative;
-    bottom: -60px;
+.filters-row {
+	margin-left: 20px;
+    margin-bottom: -70px;
+    position: relative;
     z-index: 1;
-    margin-left: 10px;
+    margin-top: 70px;
 }
 .filters-row .btn-sm {
     padding: .5rem 1rem;
